// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes - extensions - page with parameters when navigating to front page of extension renders 1`] = `
<div>
  <div>
    <span
      data-testid="non-normalized-parameter-value"
    >
      some-initial-value-for-non-normalized-parameter
    </span>
    <span
      data-testid="normalized-parameter-value"
    >
      some-initial-value-for-normalized-parameter
    </span>
    <button
      data-testid="change-non-normalized-parameter-value"
    />
  </div>
</div>
`;

exports[`routes - extensions - page with parameters when navigating to front page of extension when page parameter is changed renders 1`] = `
<div>
  <div>
    <span
      data-testid="non-normalized-parameter-value"
    >
      some-changed-value-for-non-normalized-parameter
    </span>
    <span
      data-testid="normalized-parameter-value"
    >
      some-initial-value-for-normalized-parameter
    </span>
    <button
      data-testid="change-non-normalized-parameter-value"
    />
  </div>
</div>
`;
